# libclamav-formpost-service

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  nonfree.dockerfile
.github/workflows/: docker-publish-nonfree.yml  docker-publish.yml
src/: app_config.rs  av.rs  av_bindings.rs  av_engine.rs  av_settings.rs  controller.rs  index.html  main.rs
