[package]
name = "libclamav-formpost-service"
version = "1.0.3-v20240326"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["multipart"]}
axum-prometheus = "0.6.1"
bitflags = "2.6.0"
chrono = "0.4"
config = {version = "0.14", features = ["toml", "yaml"]}
crc32fast = "1.4.2"
digest = "0.10"
hex = "0.4"
hyper = {version = "1.4", features = ["full"] }
infer = "0.16"
libc = "0.2"
md-5 = "0.10"
serde = {version = "1.0.204", features = ["derive"]}
sha2 = "0.10"
tempfile = "3"
tokio = {version = "1.38.0", features = ["full"]}
tower-http = {version = "0.5", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}

[build-dependencies]
pkg-config = "0.3"