[package]
name = "libclamav-formpost-service"
version = "1.0.7-v20241122"
edition = "2021"

[dependencies]
axum = {version = "0.8", features = ["multipart"]}
axum-prometheus = "0.8"
bitflags = "2"
chrono = "0.4"
config = {version = "0.15", features = ["toml", "yaml"]}
crc32fast = "1.4.2"
digest = "0.10"
hex = "0.4"
hyper = {version = "1.6", features = ["full"] }
infer = "0.19"
libc = "0.2"
md-5 = "0.10"
serde = {version = "1.0.217", features = ["derive"]}
sha2 = "0.10"
tempfile = "3"
tokio = {version = "1.43.0", features = ["full"]}
tower-http = {version = "0.6", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[build-dependencies]
pkg-config = "0.3"